--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
+#root {
+  height: 100%;
+}
 .App {
   text-align: center;
+  height: 100%;
 }
-
+.logo {
+  height: 10vmin;
+}
+.MuiFormControl-root.MuiTextField-root {
+  margin-left: 20px;
+  width: 40vw;
+}
+.top-panel-username {
+  color: gray;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
