--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,9 @@ body {
 }
 a {
   text-decoration: none;
-  color: black;
 }
 .MuiButton-root {
   text-transform: none !important;
-  background-color: white !important;
 }
 
 a:visited {
@@ -49,12 +47,10 @@ h5 {
   margin: 0;
 }
 .logo {
-  height: 15vmin;
+  padding: 10px;
+  height: 60px;
 }
-.MuiFormControl-root.MuiTextField-root {
-  margin-left: 20px;
-  width: 40vw;
-}
+
 .top-panel-username {
   color: gray;
 }
