--- a/src/Components/Room/room.module.css
+++ b/src/Components/Room/room.module.css
@@ -1,3 +1,11 @@
+.Room_Container {
+  box-sizing: border-box;
+  height: 100%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
 .StyledRoomHeader {
   display: flex;
   flex-direction: row;
@@ -10,13 +18,11 @@
     rgba(124, 131, 212, 1) 30%,
     rgba(74, 79, 139, 1) 150%
   );
-  min-height: 100px;
   padding: 20px;
   box-sizing: border-box;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
-  margin: 10px;
   border-radius: 5px;
 }
 
@@ -28,4 +34,42 @@
 .RoomHeader_Button {
   margin: 5px;
   background-color: white;
+}
+
+.Room_RoomMainPanel {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+
+.Room_RoomListPanel {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+  overflow: auto;
+  flex: 0.8;
+  padding-top: 30px;
+  padding-right: 30px;
+}
+
+.Room_RoomRightPanel {
+  box-sizing: border-box;
+  background-color: white;
+  flex: 0.2;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.RoomListPanel_AddPost {
+  width: 100%;
+  margin-bottom: 30px;
 }
