--- a/src/Components/Room/room.module.css
+++ b/src/Components/Room/room.module.css
@@ -4,6 +4,7 @@
   padding: 30px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .StyledRoomHeader {
@@ -40,7 +41,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  flex: 1;
+  height: 92%;
 }
 
 .Room_RoomListPanel {
@@ -66,6 +67,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 30px;
 }
 
