--- a/src/Components/Post/post.module.css
+++ b/src/Components/Post/post.module.css
@@ -25,7 +25,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .PostDetails_Container {
@@ -126,7 +126,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  margin-right: 10px;
 }
 
 .MuiSvgIcon-root {
